--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@ setTimeout(function(){
 
   body.innerHTML += "executing ['x','y','z'].item(-1) loads the polyfill<br>";
 
-  var item = ['x','y','z'].item(-1);
+  var item = ['x','y','z'].at(-1);
 
   body.innerHTML += "result: "+item;
 
