--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <title>Level.css TEST</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./mod.js"></script>
-
+  <script src="./htmlfills.js"></script>
 </head>
 <body>
 
@@ -36,3 +36,16 @@ setTimeout(function(){
 }, 1000)
 
 </script>
+
+
+<button onclick="dialogDemo.showModal()">showModal</button><br>
+
+<dialog id=dialogDemo>
+  Hello World
+</dialog>
+
+<button onclick="dialogDemo2.showModal()">showModal</button><br>
+
+<dialog id=dialogDemo2>
+  Hello demo
+</dialog>
