--- a/test.html
+++ b/test.html
@@ -33,7 +33,39 @@ setTimeout(function(){
   console.log(korean.hourCycle, japanese.hourCycle);
   // expected output: "h24" "h12"
 
-}, 1000)
+}, 1000);
+
+
+/* Node contains tests */
+
+console.log(
+  'document.contains(document)',
+  document.contains(document)
+)
+console.log(
+  'document.documentElement.contains(document)',
+  document.documentElement.contains(document)
+)
+console.log(
+  'document.contains(document.documentElement)',
+  document.contains(document.documentElement)
+)
+console.log(
+  'document.documentElement.contains(document.documentElement)',
+  document.documentElement.contains(document.documentElement)
+)
+var textel = document.body.firstChild;
+console.log(
+  'document.contains(textel)',
+  document.contains(textel)
+)
+
+/* is connected tests */
+
+div = document.createElement('div');
+console.log(div.isConnected);
+document.body.append(div)
+console.log(div.isConnected);
 
 </script>
 
