--- a/test.html
+++ b/test.html
@@ -67,6 +67,12 @@ console.log(div.isConnected);
 document.body.append(div)
 console.log(div.isConnected);
 
+
+
+console.log(crypto.randomUUID());
+
+
+
 </script>
 
 
