--- a/test.html
+++ b/test.html
@@ -64,7 +64,7 @@ console.log(
 
 div = document.createElement('div');
 console.log(div.isConnected);
-document.body.append(div)
+document.body.appendChild(div)
 console.log(div.isConnected);
 
 console.log('abacad'.replaceAll(/(a)/g, 'x$x'));
