--- a/polyfills/tests/structuredClone.html
+++ b/polyfills/tests/structuredClone.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width">
         <title>WeakRef test</title>
 <body>
+    <script src="../../mod.js"></script>
+
 
 <script>
 
