--- a/polyfills/tests/structuredClone.html
+++ b/polyfills/tests/structuredClone.html
@@ -14,12 +14,13 @@
 var object = {
     array: [1,2,3],
     date: new Date(),
-    file: new File(["content"], "name"),
+    blob: new Blob(["<svg>whatever on svg </svg>"], {type: 'image/svg'}),
+    uint8Array: new Uint8Array(2),
 }
 var copy = structuredClone(object);
 console.log(object);
 console.log(copy);
 console.log(object.date === copy.date)
 console.log(object.file === copy.file)
-
+console.log(object.uint8Array === copy.uint8Array)
 </script>
