--- a/polyfills/tests/structuredClone.html
+++ b/polyfills/tests/structuredClone.html
@@ -15,7 +15,7 @@ var object = {
     array: [1,2,3],
     date: new Date(),
     blob: new Blob(["<svg>whatever on svg </svg>"], {type: 'image/svg'}),
-    uint8Array: new Uint8Array(2),
+    uint8Array: new Uint8Array(2)
 }
 var copy = structuredClone(object);
 console.log(object);
