--- a/polyfills/tests/structuredClone.html
+++ b/polyfills/tests/structuredClone.html
@@ -21,6 +21,6 @@ var copy = structuredClone(object);
 console.log(object);
 console.log(copy);
 console.log(object.date === copy.date)
-console.log(object.file === copy.file)
+console.log(object.blob === copy.blob)
 console.log(object.uint8Array === copy.uint8Array)
 </script>
