--- a/test.html
+++ b/test.html
@@ -48,6 +48,13 @@ console.log('abacad'.replaceAll('a','x'));
 
 console.log(crypto.randomUUID());
 
+
+
+let pattern = new URLPattern({
+    protocol: 'http{s}?',
+    hostname: ':subdomain.example.com',
+});
+
 </script>
 
 
