--- a/test.html
+++ b/test.html
@@ -55,7 +55,8 @@ console.log(pattern.test('https://store.example.com/books/123') === true);
 console.log(pattern.test('https://example.com/books/123') === false);
 
 
-
+var x = new Temporal();
+console.log(x)
 
 </script>
 
