--- a/polyfills/SubmitEvent/prototype/test.html
+++ b/polyfills/SubmitEvent/prototype/test.html
@@ -9,6 +9,6 @@
 
     <form onsubmit="console.log(event.submitter); event.preventDefault()">
         <input type="text" name="text" value="">
-        <button>send</button>
-        <button>send 2</button>
+        <button class="btn1"> btn 1</button>
+        <button class="btn2"> btn 2 <div tabindex="0">focusable</div></button>
     </form>
