--- a/test.html
+++ b/test.html
@@ -72,3 +72,16 @@ cookieStore.get('test').then(console.log);
 <dialog id=dialogDemo2>
   Hello demo
 </dialog>
+
+
+<div inert>
+  <h2>inert</h2>
+  text selectable?
+  <input value="focusable?">
+</div>
+
+<div focusgroup>
+  <h2>focusgroup</h2>
+  <input type="checkbox">
+  <input type="checkbox">
+</div>
