--- a/test.html
+++ b/test.html
@@ -58,6 +58,15 @@ console.log(pattern.test('https://example.com/books/123') === false);
 cookieStore.set('test', 'xyz');
 cookieStore.get('test').then(console.log);
 
+/*
+Set methods
+let S12 = new Set(['1','2']);
+let S23 = new Set(['2','3']);
+
+console.log(S12.difference(S23))
+*/
+
+
 </script>
 
 
