--- a/test.html
+++ b/test.html
@@ -94,3 +94,6 @@ console.log(S12.difference(S23))
   <input type="checkbox">
   <input type="checkbox">
 </div>
+
+
+<button onclick="navigator.share({title:'title',text:'text',url:location.href})">share</button>
