--- a/test.html
+++ b/test.html
@@ -72,6 +72,8 @@ contextEl.setHTML(inputValue, { sanitizer: new Sanitizer() });
 console.log(contextEl.innerHTML)
 
 
+console.log([1,2,3].toReversed());
+
 </script>
 
 
