--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./mod.js" xtype=module></script>
   <script src="./htmlfills.js" type=module></script>
-  <link rel=stylesheet href="https://cdn.jsdelivr.net/gh/u1ui/norm.css@latest/norm.css">
+  <link rel=stylesheet href="https://cdn.jsdelivr.net/gh/u1ui/norm.css/norm.css">
 </head>
 <body>
 
